--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>filippograzioli.com</title>
+  <title>flpgrz.github.io</title>
   
   <meta name="author" content="Jon Barron">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
                 <name>Filippo Grazioli</name>
               </p>
 			   <p>
-                I am a research engineer at <a href="https://www.neclab.eu/research-areas/data-science/biomedical-ai">NEC Laboratories Europpe</a>, working on Machine Learning for Biomedicine.
+                I am a research engineer at <a href="https://www.neclab.eu/research-areas/data-science/biomedical-ai">NEC Laboratories Europe</a>, working on Machine Learning for Biomedicine.
               </p>
  
               <p style="text-align:center">
