--- a/index.html
+++ b/index.html
@@ -77,7 +77,38 @@
             </td>
           </tr>
         </tbody></table>
-		
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		  <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='mvib_image'><img src='images/mvib.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://www.researchgate.net/profile/Stefano-Pini-2/publication/326188655_Face_Verification_from_Depth_using_Privileged_Information/links/5bc86cbea6fdcc03c78f5c18/Face-Verification-from-Depth-using-Privileged-Information.pdf">
+                <papertitle>Face Verification from Depth using Privileged Information</papertitle>
+              </a>
+              <br>
+			  Guido Borghi,
+			  Stefano Pini,
+              <strong>Filippo Grazioli</strong>,
+			   Roberto Vezzani,
+			   Rita Cucchiara
+              <br>
+              <em>BMVC</em>, 2018
+		<br>
+              <a href="https://www.researchgate.net/profile/Stefano-Pini-2/publication/326188655_Face_Verification_from_Depth_using_Privileged_Information/links/5bc86cbea6fdcc03c78f5c18/Face-Verification-from-Depth-using-Privileged-Information.pdf">paper</a> &nbsp/&nbsp
+              <a href="data/privileged.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+			  <a href="https://www.youtube.com/watch?v=MWNcBo5iFSM" target="_blank">video</a>
+			  <br>
+              <p></p>
+              <p>A deep Siamese architecture for depth-based face verification.
+			     At training time, a hybrid network learns to extract complementary mid-level convolutional features which mimic the features of an RGB network.
+				 Leveraging privileged information learning, at test time, the model relies only on the depth data, hallucinating the color information.
+				 </p>
+            </td>
+          </tr>
+        </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
