--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		  <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='janus_image'><img src='images/janus.png'></div>
+                <div class="two" id='janus_image'><img src='images/janus.PNG'></div>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
