--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			   Roberto Vezzani,
 			   Rita Cucchiara
               <br>
-              <em>BMVC</em>, 2018
+              <em>The British Machine Vision Conference (BMVC)</em>, 2018
 		<br>
               <a href="https://www.researchgate.net/profile/Stefano-Pini-2/publication/326188655_Face_Verification_from_Depth_using_Privileged_Information/links/5bc86cbea6fdcc03c78f5c18/Face-Verification-from-Depth-using-Privileged-Information.pdf">paper</a> &nbsp/&nbsp
               <a href="data/privileged.bib" target="_blank">bibtex</a> &nbsp/&nbsp
@@ -106,6 +106,35 @@
 			     At training time, a hybrid network learns to extract complementary mid-level convolutional features which mimic the features of an RGB network.
 				 Leveraging privileged information learning, at test time, the model relies only on the depth data, hallucinating the color information.
 				 </p>
+            </td>
+          </tr>
+        </tbody></table>
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		  <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='depthgan_image'><img src='images/depthgan.PNG'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://ieeexplore.ieee.org/abstract/document/8491016">
+                <papertitle>Learning to Generate Facial Depth Maps</papertitle>
+              </a>
+              <br>
+			  Stefano Pini,
+              <strong>Filippo Grazioli</strong>,
+			  Guido Borghi,
+			  Roberto Vezzani,
+			  Rita Cucchiara
+              <br>
+              <em>International Conference on 3D Vision (3DV)</em>, 2018
+		<br>
+              <a href="https://arxiv.org/pdf/1805.11927">paper</a> &nbsp/&nbsp
+              <a href="data/gandepth.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+			  <a href="https://www.youtube.com/watch?v=JS1BGwuqQ40" target="_blank">video</a>
+			  <br>
+              <p></p>
+              <p>A conditional Generative Adversarial Network (GAN) for facial depth map estimation from monocular intensity images.</p>
             </td>
           </tr>
         </tbody></table>
