--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		  <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='depthgan_image'><img src='images/depthgan.PNG'></div>
+                <div class="two" id='depthgan_image'><img src='images/depthgan.png'></div>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
