--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </tbody></table>
 		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		  <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="vertical-align:middle">
               <div class="one">
                 <div class="two" id='depthgan_image'><img src='images/depthgan.png'></div>
               </div>
@@ -129,7 +129,7 @@
               <br>
               <em>International Conference on 3D Vision (3DV)</em>, 2018
 		<br>
-              <a href="https://arxiv.org/pdf/1805.11927">paper</a> &nbsp/&nbsp
+              <a href="https://arxiv.org/pdf/1805.11927">arXiv</a> &nbsp/&nbsp
               <a href="data/gandepth.bib" target="_blank">bibtex</a> &nbsp/&nbsp
 			  <a href="https://www.youtube.com/watch?v=JS1BGwuqQ40" target="_blank">video</a>
 			  <br>
