--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </tbody></table>
 		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		  <tr>
-            <td style="vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='depthgan_image'><img src='images/depthgan.png'></div>
               </div>
