--- a/index.html
+++ b/index.html
@@ -138,6 +138,39 @@
             </td>
           </tr>
         </tbody></table>
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		  <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='safetransition_image'><img src='images/safetransition.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/chapter/10.1007/978-3-319-93885-1_38">
+                <papertitle>Derivation of a Model of Safety Critical Transitions between Driver and Vehicle in Automated Driving</papertitle>
+              </a>
+              <br>
+			  Nicolas Daniel Herzberger,
+			  Gudrun Mechthild Irmgard Voß,
+			  Fabian Becker,
+			  <strong>Filippo Grazioli</strong>,
+			  Eugen Altendorf,
+			  Yigiterkut Canpolat,
+			  Frank Flemisch,
+			  Maximilian Schwalm
+              <br>
+              <em>International Conference on Applied Human Factors and Ergonomics (AHFE)</em>, 2018
+		<br>
+              <a href="https://www.researchgate.net/profile/Nicolas-Herzberger/publication/323453288_Derivation_of_a_Model_of_Safety_Critical_Transitions_between_Driver_and_Vehicle_in_Automated_Driving/links/5b5ec861aca272a2d6747384/Derivation-of-a-Model-of-Safety-Critical-Transitions-between-Driver-and-Vehicle-in-Automated-Driving.pdf">paper</a> &nbsp/&nbsp
+              <a href="data/herzberger2018derivation.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+			  <br>
+              <p></p>
+              <p>A model of control distribution between users and the automated systems.
+			     The elements of the control distribution in automated driving are addressed together with possible and safe transitions between different driving modes.
+				 The approach is empirically validated. Objective driving data and eye-tracking parameters are used to estimate the model’s accuracy.</p>
+            </td>
+          </tr>
+        </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
