--- a/index.html
+++ b/index.html
@@ -162,12 +162,42 @@
               <em>International Conference on Applied Human Factors and Ergonomics (AHFE)</em>, 2018
 		<br>
               <a href="https://www.researchgate.net/profile/Nicolas-Herzberger/publication/323453288_Derivation_of_a_Model_of_Safety_Critical_Transitions_between_Driver_and_Vehicle_in_Automated_Driving/links/5b5ec861aca272a2d6747384/Derivation-of-a-Model-of-Safety-Critical-Transitions-between-Driver-and-Vehicle-in-Automated-Driving.pdf">paper</a> &nbsp/&nbsp
-              <a href="data/herzberger2018derivation.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+              <a href="data/herzberger2018derivation.bib" target="_blank">bibtex</a>
 			  <br>
               <p></p>
               <p>A model of control distribution between users and the automated systems.
 			     The elements of the control distribution in automated driving are addressed together with possible and safe transitions between different driving modes.
 				 The approach is empirically validated. Objective driving data and eye-tracking parameters are used to estimate the model’s accuracy.</p>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		  <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='adsimulator_image'><img src='images/adsimulator.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://www.researchgate.net/publication/319910931_Simulation_Framework_for_Executing_Component_and_Connector_Models_of_Self-Driving_Vehicles">
+                <papertitle>Simulation Framework for Executing Component and Connector Models of Self-Driving Vehicles</papertitle>
+              </a>
+              <br>
+			  <strong>Filippo Grazioli</strong>,
+			  Evgeny Kusmenko,
+			  Alexander Roth,
+			  Bernhard Rumpe,
+			  Michael von Wenckstern
+              <br>
+              <em>International Conference on Model Driven Engineering Languages and Systems (MODELS)</em>, 2017
+		<br>
+              <a href="https://sse-rwth.de/publications/Simulation-Framework-for-Executing-Component-and-Connector-Models-of-Self-Driving-Vehicles.pdf">paper</a> &nbsp/&nbsp
+              <a href="data/grazioli2017simulation.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+			  <a href="https://www.youtube.com/watch?v=d-EEs62-rGM" target="_blank">video</a>
+			  <br>
+              <p></p>
+              <p>An approach that combines the benefits of both high-level and low-level simulators to execute component and connector models.
+                 The simulator allows for adaptations and extensions of the physical vehicle configuration including new sensors, actuators and control systems.</p>
             </td>
           </tr>
         </tbody></table>
