--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 			  <a href="https://github.com/nec-research/microbiome-mvib" target="_blank">code</a>
 			  <br>
               <p></p>
-              <p>Adopting an information theoretic interpretation of deep neural networks, MVIB allows to compute a joint stochastic encoding of heterogeneous input data modalities.
-			     We use the MVIB to predict whether patients are affected by a certain disease by looking at their gut microbiome from different perspectives.
+              <p>A multimodal learning model derived from the theory of the information bottleneck.
+			     By looking at a patient's gut microbiome, we predict if they are affected by a certain disease.
 				 </p>
             </td>
           </tr>
@@ -103,8 +103,7 @@
 			  <br>
               <p></p>
               <p>A deep Siamese architecture for depth-based face verification.
-			     At training time, a hybrid network learns to extract complementary mid-level convolutional features which mimic the features of an RGB network.
-				 Leveraging privileged information learning, at test time, the model relies only on the depth data, hallucinating the color information.
+				 Leveraging privileged information learning, the model relies only on depth images, hallucinating the color information.
 				 </p>
             </td>
           </tr>
@@ -166,8 +165,7 @@
 			  <br>
               <p></p>
               <p>A model of control distribution between users and the automated systems.
-			     The elements of the control distribution in automated driving are addressed together with possible and safe transitions between different driving modes.
-				 The approach is empirically validated. Objective driving data and eye-tracking parameters are used to estimate the model’s accuracy.</p>
+			     Objective driving data and eye-tracking parameters are used to estimate the model’s accuracy.</p>
             </td>
           </tr>
         </tbody></table>
@@ -196,7 +194,7 @@
 			  <a href="https://www.youtube.com/watch?v=d-EEs62-rGM" target="_blank">video</a>
 			  <br>
               <p></p>
-              <p>An approach that combines the benefits of both high-level and low-level simulators to execute component and connector models.
+              <p>A simulator that combines the benefits of both high-level and low-level simulators to execute component and connector models.
                  The simulator allows for adaptations and extensions of the physical vehicle configuration including new sensors, actuators and control systems.</p>
             </td>
           </tr>
