--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			  <br>
               <p></p>
               <p>A simulator that combines the benefits of both high-level and low-level simulators to execute component and connector models.
-                 The simulator allows for adaptations and extensions of the physical vehicle configuration including new sensors, actuators and control systems.</p>
+                 The simulator allows to include new sensors, actuators and control systems.</p>
             </td>
           </tr>
         </tbody></table>
