--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='mvib_image'><img class="img-responsive"  src='images/mvib.png'></div>
+                <div class="two" id='mvib_image'><img src='images/mvib.png'></div>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
