link to jon barron

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                <a href="https://jonbarron.info/">I like this website.</a>
+                Website template by <a href="https://jonbarron.info/">Jon Barron</a>.
               </p>
             </td>
           </tr>
