--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
               <br>
               <strong>Filippo Grazioli</strong>,
                Raman Siarheyeu,
+	       Israa Alqassem,
+	       Andreas Henschel,
 			   Giampaolo Pileggi,
 			   Andrea Meiser
               <br>
