--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <name>Filippo Grazioli</name>
               </p>
 			   <p>
-                I am a research engineer at <a href="https://www.neclab.eu/research-areas/data-science/biomedical-ai">NEC Laboratories Europe</a>, working on Machine Learning for Biomedicine.
+                I am a research engineer at <a href="https://www.neclab.eu/research-areas/data-science/biomedical-ai">NEC Laboratories Europe</a>, working on machine learning for biomedicine.
               </p>
  
               <p style="text-align:center">
