upd microbiome plos

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.biorxiv.org/content/10.1101/2021.06.08.447505v9">
+              <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010050">
                 <papertitle>Microbiome-based disease prediction with multimodal variational information bottlenecks</papertitle>
               </a>
               <br>
@@ -66,9 +66,9 @@
 			   Giampaolo Pileggi,
 			   Andrea Meiser
               <br>
-              <em>pre-print</em>, 2021
+              <em>PLOS Computational Biology</em>, 2022
 		<br>
-              <a href="https://www.biorxiv.org/content/10.1101/2021.06.08.447505v9">bioarXiv</a> &nbsp/&nbsp
+              <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010050">paper</a> &nbsp/&nbsp
               <a href="data/mvib.bib" target="_blank">bibtex</a> &nbsp/&nbsp
 			  <a href="https://github.com/nec-research/microbiome-mvib" target="_blank">code</a>
 			  <br>
