--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <br>
               <em>PLOS Computational Biology</em>, 2022
 		<br>
-              <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010050">paper</a> &nbsp/&nbsp
+              <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1010050&type=printable">paper</a> &nbsp/&nbsp
               <a href="data/mvib.bib" target="_blank">bibtex</a> &nbsp/&nbsp
 			  <a href="https://github.com/nec-research/microbiome-mvib" target="_blank">code</a>
 			  <br>
