--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-              The first part of my research experience has been devoted to computer vision and automated driving. More recently, I developed a strong interest in machine learning applied to biomedicine.
+              The first part of my research experience has been devoted to computer vision and automated driving. More recently, I developed a strong interest in machine learning applied for solving biomedical challenges.
               </p>
             </td>
           </tr>
