--- a/index.html
+++ b/index.html
@@ -47,6 +47,48 @@
             </td>
           </tr>
         </tbody></table>
+		
+		
+		
+		
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='tchard_image'><img src='images/tchard.jpg'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://www.frontiersin.org/articles/10.3389/fimmu.2022.1014256/full">
+                <papertitle>On TCR binding predictors failing to generalize to unseen peptides</papertitle>
+              </a>
+              <br>
+              <strong>Filippo Grazioli</strong>,
+               Anja Mösch,
+               Pierre Machart,
+               Kai Li,
+               Israa Alqassem,
+               Timothy J. O'Donnell,
+               Martin Renqiang Min
+              <br>
+              <em>Frontiers in Immunology</em>, 2022
+		<br>
+              <a href="https://www.frontiersin.org/articles/10.3389/fimmu.2022.1014256/full">paper</a> &nbsp/&nbsp
+              <a href="data/tchard.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+			  <a href="https://github.com/flpgrz/tc-hard" target="_blank">code</a>
+			  <a href="https://zenodo.org/record/6962043" target="_blank">dataset</a>
+			  <br>
+              <p></p>
+              <p> In this work we investigate how well current deep learning models can predict the binding of T cell receptors (TCRs) and peptide-MHC complexes presented on cells. 
+			  We create a dataset, named TChard, including samples from IEDB, VDJdb, McPAS-TCR, and the MIRA set, as well as negative samples from both randomization and 10X Genomics assays. 
+			  We investigate the effect of different training/test splitting techniques on the models’ test performance. 
+			  Our results show that modern deep learning methods fail to generalize to unseen peptides.
+				 </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -79,6 +121,8 @@
             </td>
           </tr>
         </tbody></table>
+		
+		
 		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		  <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
