--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 		<br>
               <a href="https://www.frontiersin.org/articles/10.3389/fimmu.2022.1014256/full">paper</a> &nbsp/&nbsp
               <a href="data/tchard.bib" target="_blank">bibtex</a> &nbsp/&nbsp
-			  <a href="https://github.com/flpgrz/tc-hard" target="_blank">code</a>
+			  <a href="https://github.com/flpgrz/tc-hard" target="_blank">code</a> &nbsp/&nbsp
 			  <a href="https://zenodo.org/record/6962043" target="_blank">dataset</a>
 			  <br>
               <p></p>
-              <p> In this work we investigate how well current deep learning models can predict the binding of T cell receptors (TCRs) and peptide-MHC complexes presented on cells. 
+              <p> Here, we investigate the generalization capabilities of current deep-learning-based TCR binding predictors, 
+			  i.e. models that predict the interaction of T cell receptors (TCRs) and peptide-MHC complexes presented on cells. 
 			  We create a dataset, named TChard, including samples from IEDB, VDJdb, McPAS-TCR, and the MIRA set, as well as negative samples from both randomization and 10X Genomics assays. 
-			  We investigate the effect of different training/test splitting techniques on the models’ test performance. 
 			  Our results show that modern deep learning methods fail to generalize to unseen peptides.
 				 </p>
             </td>
