--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
               <em>pre-print</em>, 2022
 		<br>
               <a href="https://arxiv.org/pdf/2210.08171">paper</a> &nbsp/&nbsp
-              <a href="data/disentangle-tcr.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+              <a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>
 			  <br>
               <p></p>
               <p> The interaction between T cell receptors (TCRs) and peptide antigens is critical for human immune responses. 
 			  Designing antigen-specific TCRs represents an important step in adoptive immunotherapy.
-			  We propose a disentangle autoencoder, which can act as generative model for optimized TCR sequences. Optimized TCR sequences
+			  We propose a disentangled autoencoder, which can act as generative model for optimized TCR sequences. Optimized TCR sequences
 			  present enhanced binding affinity to a given peptide and preserve the backbone of a template TCR.
 				 </p>
             </td>
