--- a/index.html
+++ b/index.html
@@ -277,6 +277,24 @@
             </td>
           </tr>
         </tbody></table>
+	      
+	      
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Patents</heading>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+	<tr>
+		 <p> WO2022242886 - A METHOD AND SYSTEM FOR PREDICTING A PHENOTYPIC FEATURE OF A HOST BASED ON A MICROBIOME OF THE HOST 
+		 <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=0&ND=3&adjacent=true&locale=en_EP.%20(You%20can%20enter%20the&FT=D&date=20221124&CC=WO&NR=2022242886A1&KC=A1#" target="_blank">[link]</a>
+        	 </p>
+	</tr>
+        </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
