--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Patents</heading>
-		 <p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=0&ND=3&adjacent=true&locale=en_EP.%20(You%20can%20enter%20the&FT=D&date=20221124&CC=WO&NR=2022242886A1&KC=A1#" target="_blank">WO2022242886</a> - A METHOD AND SYSTEM FOR PREDICTING A PHENOTYPIC FEATURE OF A HOST BASED ON A MICROBIOME OF THE HOST 
+		 <p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=0&ND=3&adjacent=true&locale=en_EP.%20(You%20can%20enter%20the&FT=D&date=20221124&CC=WO&NR=2022242886A1&KC=A1#" target="_blank">WO2022242886 (A1)</a> - A METHOD AND SYSTEM FOR PREDICTING A PHENOTYPIC FEATURE OF A HOST BASED ON A MICROBIOME OF THE HOST 
 		 
         	 </p>
             </td>
