--- a/index.html
+++ b/index.html
@@ -282,9 +282,11 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Patents</heading>
+              <heading>Patents and Patent Applications</heading>
 		 <p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=0&ND=3&adjacent=true&locale=en_EP.%20(You%20can%20enter%20the&FT=D&date=20221124&CC=WO&NR=2022242886A1&KC=A1#" target="_blank">WO2022242886 (A1)</a> - A METHOD AND SYSTEM FOR PREDICTING A PHENOTYPIC FEATURE OF A HOST BASED ON A MICROBIOME OF THE HOST 
-		 
+        	 </p>
+		    
+		 <p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20181129&CC=IT&NR=201800008237A1&KC=A1#" target="_blank">IT201800008237 (A1)</a> - Sistema e metodo di autenticazione di persone in ambienti a limitata visibilità   
         	 </p>
             </td>
           </tr>
