--- a/index.html
+++ b/index.html
@@ -42,12 +42,46 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-              The first part of my research experience has been devoted to computer vision and automated driving. More recently, I developed a strong interest in machine learning applied for solving biomedical challenges.
+              My research work has been devoted to machine learning applied to computer vision, automated driving and biomedical informatics.
               </p>
             </td>
           </tr>
         </tbody></table>
 		
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='tchard_image'><img src='images/aoe.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/btac820/6960920">
+                <papertitle>Attentive Variational Information Bottleneck for TCR-peptide Interaction Prediction</papertitle>
+              </a>
+              <br>  
+              <strong>Filippo Grazioli</strong>,
+		    Pierre Machart,
+		    Anja Mösch,
+		    Kai Li,
+		    Leonardo V. Castorina,
+		    Nico Pfeifer, 
+		    Martin Renqiang Min,
+              <br>
+              <em>Bioinformatics</em>, 2022
+		<br>
+              <a href="https://academic.oup.com/bioinformatics/advance-article-pdf/doi/10.1093/bioinformatics/btac820/48416473/btac820.pdf">paper</a> &nbsp/&nbsp
+              <a href="data/avib.bib" target="_blank">bibtex</a>
+			  <br>
+              <p></p>
+              <p>A multi-sequence variational method for binding prediction between T-cell receptors (TCRs) and peptides presented on cells.
+		 We present a multi-sequence generalization of Variational Information Bottleneck (VIB) (Alemi et al., 2016) and call the resulting model Attentive Variational Information Bottleneck (AVIB). 
+		     Our AVIB model leverages multi-head self-attention (Vaswani et al., 2017) to implicitly approximate a posterior distribution over latent encodings conditioned on multiple input sequences. 
+		</p>
+            </td>
+          </tr>
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		<tr>
