--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
               <em>Bioinformatics</em>, 2022
 		<br>
               <a href="https://academic.oup.com/bioinformatics/advance-article-pdf/doi/10.1093/bioinformatics/btac820/48416473/btac820.pdf">paper</a> &nbsp/&nbsp
-              <a href="data/avib.bib" target="_blank">bibtex</a>
+              <a href="data/avib.bib" target="_blank">bibtex</a> &nbsp/&nbsp
+		    <a href="https://github.com/nec-research/vibtcr" target="_blank">code</a> 
 			  <br>
               <p></p>
               <p>A multi-sequence variational method for binding prediction between T-cell receptors (TCRs) and peptides presented on cells.
-		 We present a multi-sequence generalization of Variational Information Bottleneck (VIB) (Alemi et al., 2016) and call the resulting model Attentive Variational Information Bottleneck (AVIB). 
-		     Our AVIB model leverages multi-head self-attention (Vaswani et al., 2017) to implicitly approximate a posterior distribution over latent encodings conditioned on multiple input sequences. 
+		 We present a multi-sequence generalization of Variational Information Bottleneck (VIB) (Alemi et al., 2016) and call it Attentive Variational Information Bottleneck (AVIB). 
+		     AVIB leverages multi-head self-attention (Vaswani et al., 2017) to implicitly approximate a posterior distribution over latent encodings conditioned on multiple input sequences. 
 		</p>
             </td>
           </tr>
