--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		    Kai Li,
 		    Leonardo V. Castorina,
 		    Nico Pfeifer, 
-		    Martin Renqiang Min,
+		    Martin Renqiang Min
               <br>
               <em>Bioinformatics</em>, 2022
 		<br>
