--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <name>Filippo Grazioli</name>
               </p>
 			   <p>
-                I am a research engineer at <a href="https://www.neclab.eu/research-areas/data-science/biomedical-ai">NEC Laboratories Europe</a>, working on machine learning for biomedicine.
+                I am a Senior ML Engineer II at <a href="https://getcruise.com">Cruise</a>, working on 3D detection and LiDAR/camera/radar fusion for autonomous vehicles.
               </p>
  
               <p style="text-align:center">
