--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <name>Filippo Grazioli</name>
               </p>
 			   <p>
-                I am a Senior ML Engineer II at <a href="https://getcruise.com">Cruise</a>, working on 3D object detection, LiDAR/camera/radar fusion and deep learning for autonomous vehicles.
+                I am a senior engineer at <a href="https://getcruise.com">Cruise</a>, working on 3D object detection, LiDAR/camera/radar fusion and deep learning for autonomous vehicles.
               </p>
  
               <p style="text-align:center">
