--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <a href="mailto:sendtofilippo@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/cv-grazioli.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=pdje0fcAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/flpgrz">Github</a> <!--&nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/flpgrz/">LinkedIn</a>-->
+                <a href="https://github.com/flpgrz">Github</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/flpgrz/">LinkedIn</a>
+              
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
