--- a/index.html
+++ b/index.html
@@ -47,7 +47,39 @@
             </td>
           </tr>
         </tbody></table>
-		
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='tchard_image'><img src='images/disentangle-tcr.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2210.08171">
+                <papertitle>Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering</papertitle>
+              </a>
+              <br>
+			  Tianxiao Li,
+			  Hongyu Guo,
+              <strong>Filippo Grazioli</strong>,
+               Mark Gerstein,
+		Martin Renqiang Min
+              <br>
+              <em>NeurIPS</em>, 2023
+		<br>
+              <a href="https://arxiv.org/pdf/2210.08171">paper</a> &nbsp/&nbsp
+              <a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>
+			  <br>
+              <p></p>
+              <p> The interaction between T cell receptors (TCRs) and peptide antigens is critical for human immune responses. 
+			  Designing antigen-specific TCRs represents an important step in adoptive immunotherapy.
+			  We propose a disentangled autoencoder, which can act as generative model for optimized TCR sequences. Optimized TCR sequences
+			  present enhanced binding affinity to a given peptide and preserve the backbone of a template TCR.
+				 </p>
+            </td>
+          </tr>
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		<tr>
@@ -83,40 +115,6 @@
             </td>
           </tr>
         </tbody></table>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-		<tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='tchard_image'><img src='images/disentangle-tcr.png'></div>
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2210.08171">
-                <papertitle>Learning Disentangled Representations for T Cell Receptor Design</papertitle>
-              </a>
-              <br>
-			  Martin Renqiang Min,
-			  Tianxiao Li,
-			  Hongyu Guo,
-              <strong>Filippo Grazioli</strong>,
-               Mark Gerstein
-              <br>
-              <em>pre-print</em>, 2022
-		<br>
-              <a href="https://arxiv.org/pdf/2210.08171">paper</a> &nbsp/&nbsp
-              <a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>
-			  <br>
-              <p></p>
-              <p> The interaction between T cell receptors (TCRs) and peptide antigens is critical for human immune responses. 
-			  Designing antigen-specific TCRs represents an important step in adoptive immunotherapy.
-			  We propose a disentangled autoencoder, which can act as generative model for optimized TCR sequences. Optimized TCR sequences
-			  present enhanced binding affinity to a given peptide and preserve the backbone of a template TCR.
-				 </p>
-            </td>
-          </tr>
-        </tbody></table>
-
 		
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		<tr>
