--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
               <br>
               <em>NeurIPS</em>, 2023
 		<br>
-              <a href="https://arxiv.org/pdf/2210.08171">paper</a> &nbsp/&nbsp
-              <a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>
+              <a href="https://arxiv.org/pdf/2210.08171">pre-print</a> &nbsp/&nbsp
+              <!--<a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>-->
 			  <br>
               <p></p>
               <p> The interaction between T cell receptors (TCRs) and peptide antigens is critical for human immune responses. 
