--- a/index.html
+++ b/index.html
@@ -316,6 +316,15 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Patents and Patent Applications</heading>
+		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20230727&CC=WO&NR=2023139031A1&KC=A1" target="_blank">WO2023139031 (A1)</a> - METHOD AND SYSTEM FOR PREDICTING TCR (T CELL RECEPTOR)-PEPTIDE INTERACTIONS    
+        	 </p>
+	
+		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20231012&CC=WO&NR=2023193935A1&KC=A1" target="_blank">WO2023193935 (A1)</a> - METHOD AND SYSTEM FOR PREDICTING GENE EXPRESSION PERTURBATIONS   
+        	 </p>
+	
+		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=2&ND=3&adjacent=true&locale=en_EP&FT=D&date=20230727&CC=WO&NR=2023138755A1&KC=A1" target="_blank">WO2023138755 (A1)</a> - METHODS OF VACCINE DESIGN    
+        	 </p>
+	
 		 <p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20230504&CC=WO&NR=2023072421A1&KC=A1" target="_blank">WO2023072421 (A1)</a> - SYSTEM AND METHOD FOR INDUCTIVE LEARNING ON GRAPHS WITH KNOWLEDGE FROM LANGUAGE MODELS 
         	 </p>
 
@@ -324,6 +333,7 @@
 		    
 		 <p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?DB=EPODOC&II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20181129&CC=IT&NR=201800008237A1&KC=A1#" target="_blank">IT201800008237 (A1)</a> - Sistema e metodo di autenticazione di persone in ambienti a limitata visibilità   
         	 </p>
+
             </td>
           </tr>
         </tbody></table>
