--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                Mark Gerstein,
 		Martin Renqiang Min
               <br>
-              <em>NeurIPS</em>, 2023
+              <em>Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)</em>, 2023
 		<br>
-              <a href="https://arxiv.org/pdf/2210.08171">pre-print</a> &nbsp/&nbsp
+              <a href="https://arxiv.org/pdf/2210.08171">paper</a> &nbsp/&nbsp
               <!--<a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>-->
 			  <br>
               <p></p>
