--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <em>Thirty-seventh Conference on Neural Information Processing Systems (NeurIPS)</em>, 2023
 		<br>
               <a href="https://arxiv.org/pdf/2210.08171">paper</a> &nbsp/&nbsp
-              <!--<a href="data/disentangle-tcr.bib" target="_blank">bibtex</a>-->
+              <a href="data/tcrware.bib" target="_blank">bibtex</a>
 			  <br>
               <p></p>
               <p> The interaction between T cell receptors (TCRs) and peptide antigens is critical for human immune responses. 
