--- a/index.html
+++ b/index.html
@@ -57,6 +57,39 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2210.08171">
+                <papertitle>Are you a robot? Detecting Autonomous Vehicles from Behavior Analysis</papertitle>
+              </a>
+              <br>
+			  Fabio Maresca,
+              <strong>Filippo Grazioli</strong>,
+               Antonio Albanese,
+		Vincenzo Sciancalepore,
+		Gianpiero Negri,
+		 Xavier Costa-Perez
+              <br>
+              <em>IEEE International Conference on Robotics and Automation (ICRA)</em>, 2024
+		<br>
+              <a href="https://arxiv.org/abs/2403.09571">paper</a> &nbsp/&nbsp
+	      <a href="https://zenodo.org/records/7682484">dataset</a> 
+			  <br>
+              <p></p>
+              <p> A study aimed at investigating whether we can detect autonomous vehicles from their behaviors in scenarios
+		in which they share the road with human-driven ones. For this work, we created the NexusStreet dataset and made it 
+		publicly available.
+	      </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='tchard_image'><img src='images/disentangle-tcr.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2210.08171">
                 <papertitle>Disentangled Wasserstein Autoencoder for T-Cell Receptor Engineering</papertitle>
               </a>
               <br>
