--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2210.08171">
+              <a href="https://arxiv.org/abs/2403.09571">
                 <papertitle>Are you a robot? Detecting Autonomous Vehicles from Behavior Analysis</papertitle>
               </a>
               <br>
@@ -73,8 +73,8 @@
 	      <a href="https://zenodo.org/records/7682484">dataset</a> 
 			  <br>
               <p></p>
-              <p> A study aimed at investigating whether we can detect autonomous vehicles from their behaviors in scenarios
-		in which they share the road with human-driven ones. For this work, we created the NexusStreet dataset and made it 
+              <p> Can we detect autonomous vehicles from their behaviors in scenarios
+		in which they share the road with human-driven ones? For this work, we created the NexusStreet dataset and made it 
 		publicly available.
 	      </p>
             </td>
