--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='tchard_image'><img src='images/nexus-street.png'></div>
+                <div class="two" id='nexus-street'><img src='images/nexus-street.png'></div>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
