--- a/index.html
+++ b/index.html
@@ -52,6 +52,35 @@
 		<tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <div class="two" id='nexus-street'><img src='images/neoagdt.png'></div>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://academic.oup.com/bioinformatics/article/40/5/btae205/7645414">
+                <papertitle>NeoAgDT: optimization of personal neoantigen vaccine composition by digital twin simulation of a cancer cell population</papertitle>
+              </a>
+              <br>
+			  Anja Moesch,
+              <strong>Filippo Grazioli</strong>,
+               Pierre Machart,
+		Brandon Malone
+              <br>
+              <em>Bioinformaics</em>, 2024
+		<br>
+              <a href="https://academic.oup.com/bioinformatics/article/40/5/btae205/7645414">paper</a> &nbsp/&nbsp
+	      <a href="https://github.com/nec-research/neoagdt">code</a> 
+			  <br>
+              <p></p>
+              <p> NeoAgDT is a framework for optimizing personalized neoantigen-based cancer vaccines. It is a two-step approach consisting of: (i) simulating individual cancer cells to create a digital twin of the patient’s tumor cell population and (ii) optimizing the vaccine composition by integer linear programming based on this digital twin.
+	      </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+		<tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <div class="two" id='nexus-street'><img src='images/nexus-street.png'></div>
               </div>
             </td>
