--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                Pierre Machart,
 		Brandon Malone
               <br>
-              <em>Bioinformaics</em>, 2024
+              <em>Bioinformatics</em>, 2024
 		<br>
               <a href="https://academic.oup.com/bioinformatics/article/40/5/btae205/7645414">paper</a> &nbsp/&nbsp
 	      <a href="https://github.com/nec-research/neoagdt">code</a> 
