--- a/index.html
+++ b/index.html
@@ -378,6 +378,9 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Patents and Patent Applications</heading>
+		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20240215&CC=WO&NR=2024032909A1&KC=A1" target="_blank">WO2024032909 (A1)</a> - METHODS AND SYSTEMS FOR CANCER-ENRICHED MOTIF DISCOVERY FROM SPLICING VARIATIONS IN TUMOURS    
+        	 </p>
+		    
 		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=0&ND=3&adjacent=true&locale=en_EP&FT=D&date=20230727&CC=WO&NR=2023139031A1&KC=A1" target="_blank">WO2023139031 (A1)</a> - METHOD AND SYSTEM FOR PREDICTING TCR (T CELL RECEPTOR)-PEPTIDE INTERACTIONS    
         	 </p>
 	
