--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <name>Filippo Grazioli</name>
               </p>
 			   <p>
-                I am a senior engineer at <a href="https://getcruise.com">Cruise</a>, working on 3D object detection, scene and vehicle understanding, LiDAR/camera/radar fusion and deep learning for autonomous vehicles.
+                I am a senior ML engineer at <a href="https://gsk.ai">GSK</a>, working in the Biomedical AI group. Previously, I was a senior ML engineer at <a href="https://en.wikipedia.org/wiki/Cruise_(autonomous_vehicle)">Cruise</a>, where I worked on computer vision and deep learning for autonomous vehicles. I am interested in machine learning, and its applications to healthcare and robotics.
               </p>
  
               <p style="text-align:center">
