Add patent links and descriptions for autonomous vehicle technologies

--- a/index.html
+++ b/index.html
@@ -378,6 +378,18 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Patents and Patent Applications</heading>
+		<p> <a href="https://worldwide.espacenet.com/patent/search/family/087762423/publication/US2025065906A1?q=pn%3DUS2025065906A1" target="_blank">US2025065906 (A1)</a> - MULTI-SENSOR VISION FOR AUTONOMOUS VEHICLE BASED ON PRIVILEGED INFORMATION LEARNING    
+        	 </p>
+		<p> <a href="https://worldwide.espacenet.com/patent/search/family/087889260/publication/US2025077958A1?q=pn%3DUS2025077958A1" target="_blank">US2025077958 (A1)</a> - AUTOMATIC REMOVAL OF SELECTED TRAINING DATA FROM DATASET    
+        	 </p>
+		<p> <a href="https://worldwide.espacenet.com/patent/search/family/087762695/publication/US2025069410A1?q=pn%3DUS2025069410A1" target="_blank">US2025069410 (A1)</a> - BIRD’S-EYE VIEW ADAPTIVE INFERENCE RESOLUTION    
+        	 </p>
+		<p> <a href="https://worldwide.espacenet.com/patent/search/family/087889547/publication/US2025078440A1?q=pn%3DUS2025078440A1" target="_blank">US2025078440 (A1)</a> - GENERATING OCCLUSION ATTRIBUTES FOR OCCLUDED OBJECTS    
+        	 </p>
+		<p> <a href="https://worldwide.espacenet.com/patent/search/family/087929383/publication/US2025078485A1?q=pn%3DUS2025078485A1" target="_blank">US2025078485 (A1)</a> - SYSTEMS AND METHODS FOR PROCESSING SELECTED PORTIONS OF RADAR DATA    
+        	 </p>
+		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20240215&CC=WO&NR=2024032909A1&KC=A1" target="_blank">US2025078651 (A1)</a> - ONLINE OCCLUSION PREDICTION FOR AUTONOMOUS VEHICLES    
+        	 </p>
 		<p> <a href="https://worldwide.espacenet.com/publicationDetails/biblio?II=1&ND=3&adjacent=true&locale=en_EP&FT=D&date=20240215&CC=WO&NR=2024032909A1&KC=A1" target="_blank">WO2024032909 (A1)</a> - METHODS AND SYSTEMS FOR CANCER-ENRICHED MOTIF DISCOVERY FROM SPLICING VARIATIONS IN TUMOURS    
         	 </p>
 		    
