--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <p style="text-align:center">
                 <name>Filippo Grazioli</name>
               </p>
-			   <p style="word-spacing: normal;">I am a senior ML engineer at <a href="https://gsk.ai">GSK</a><span style="white-space: nowrap;">,</span> working in the Biomedical AI group. Previously, I was a senior ML engineer at <a href="https://en.wikipedia.org/wiki/Cruise_(autonomous_vehicle)">Cruise</a><span style="white-space: nowrap;">,</span> where I worked on computer vision and deep learning for autonomous vehicles. I am interested in machine learning, and its applications to healthcare and robotics.</p>
+			   <p style="word-spacing: normal; overflow-wrap: break-word; word-break: break-word;">I am a senior ML engineer at <a href="https://gsk.ai">GSK</a>, working in the Biomedical AI group. Previously, I was a senior ML engineer at <a href="https://en.wikipedia.org/wiki/Cruise_(autonomous_vehicle)">Cruise</a>, where I worked on computer vision and deep learning for autonomous vehicles. I am interested in machine learning, and its applications to healthcare and robotics.</p>
  
               <p style="text-align:center">
                 <a href="mailto:sendtofilippo@gmail.com">Email</a> &nbsp/&nbsp
